--- a/style.css
+++ b/style.css
@@ -35,12 +35,13 @@ body {
     align-items: center;
     flex-wrap: wrap;
     padding: 5%;
-    gap: 11px;
+    gap: 9px;
 }
 button {
     height: 35%;
     width: 22%;
-    border: 2px solid black;
+    border: 4px solid transparent;
+    border-image: url(pixelArtBorder.png) 3 repeat;
     font-size: 1.2rem;
     background-color: #9BA4F1
 }
@@ -53,5 +54,4 @@ button {
 body > #container > #calculator-buttons > button:hover{
     background-color: #000000a6;
     color: white;
-    border: 2px solid white;
 }
