--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ body {
     flex-direction: column;
     height: 70vh;
     width: min(400px, 90vw);
-    background-color: #F19BA4;
-    border: 1px solid rgb(255, 255, 255)
+    background-color: #3B0323;
+    border: 3px solid rgb(0, 0, 0)
 }
 
 
@@ -24,7 +24,8 @@ body {
     align-items: center;
     justify-content: flex-end;
     padding: 10px;
-    background-color: rgba(14, 13, 34, 0.678);
+    background-color: rgba(12, 12, 24, 0.842);
+    border: 2px solid black;
 }
 
 /* buttons */
@@ -41,15 +42,16 @@ button {
     height: 35%;
     width: 22%;
     border: 4px solid transparent;
-    border-image: url(pixelArtBorder.png) 3 repeat;
+    border-image: url(resources/pixelArtBorder.png) 4 repeat;
     font-size: 1.2rem;
-    background-color: #9BA4F1
+    background-color: #03233B;
+    color: white
 }
 #calculator-buttons #calculate-btn {
     width: 47%;
 }
 #divide-btn, #multiply-btn, #add-btn, #subtract-btn {
-    background-color: #A4F19B;
+    background-color: #233B03;
 }
 body > #container > #calculator-buttons > button:hover{
     background-color: #000000a6;
