--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(15, 15, 15);
+    background-color: rgb(0, 0, 0);
 }
 
 #container {
@@ -15,17 +15,19 @@ body {
     height: 70vh;
     width: min(400px, 90vw);
     background-color: #3B0323;
-    border: 3px solid rgb(0, 0, 0)
+    border: 5px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgb(255, 0, 0);
 }
 
 
 #calculator-screen {
     display: flex;
     flex-direction: column;
-    flex: 0 0 30%;
+    flex: 0 0 25%;
     align-items: flex-start;
     justify-content: flex-end;
-    padding: 10px;
+    padding: 15px;
     background-color: rgba(12, 12, 24, 0.842);
     border: 2px solid black;
 }
@@ -34,6 +36,7 @@ body {
 
 #calculator-buttons {
     display: flex;
+    height: 30%;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -44,7 +47,7 @@ button {
     height: 35%;
     width: 22%;
     border: 4px solid transparent;
-    border-image: url(resources/pixelArtBorder.png) 4 repeat;
+    border-radius: 10px;
     font-size: 1.2rem;
     background-color: #03233B;
     color: white
@@ -58,6 +61,7 @@ button {
 body > #container > #calculator-buttons > button:hover{
     background-color: #000000a6;
     color: white;
+    box-shadow: 0 0 50px rgb(119, 0, 255);
 }
 
 
