--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body {
 #container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 70vh;
     width: min(400px, 90vw);
-    background-color: #3B0323;
+    background-color: #3f0b28;
     border: 5px solid rgb(0, 0, 0);
     border-radius: 15px;
     box-shadow: 0 0 10px rgb(255, 0, 0);
@@ -24,12 +25,14 @@ body {
 #calculator-screen {
     display: flex;
     flex-direction: column;
-    flex: 0 0 25%;
+    margin-top: 5%;
+    width: 80%;
+    flex: 0 0 20%;
     align-items: flex-start;
     justify-content: flex-end;
     padding: 15px;
     background-color: rgba(12, 12, 24, 0.842);
-    border: 2px solid black;
+    border: 4px solid black;
 }
 
 /* buttons */
@@ -46,7 +49,7 @@ body {
 button {
     height: 35%;
     width: 22%;
-    border: 4px solid transparent;
+    border: 4px solid black;
     border-radius: 10px;
     font-size: 1.2rem;
     background-color: #03233B;
