--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     background-color: #3f0b28;
     border: 5px solid rgb(0, 0, 0);
     border-radius: 15px;
-    box-shadow: 0 0 10px rgb(255, 0, 0);
+    box-shadow: 0 0 5px rgb(255, 0, 0);
 }
 
 
@@ -33,6 +33,8 @@ body {
     padding: 15px;
     background-color: rgba(12, 12, 24, 0.842);
     border: 4px solid black;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
 }
 
 /* buttons */
